Finished News and Jobs Features
i fking want to kill myself

--- a/appV2/app/src/main/res/values/strings.xml
+++ b/appV2/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="stk_default">STK 0.00</string>
     <string name="btc_default">BTC 0.00</string>
     <string name="all">All</string>
+    <string name="news">News</string>
+    <string name="jobs">Jobs</string>
 </resources>
